--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="senthilkumar">
             SENTHIL KUMAR<sup><sup id="copy">&copy;<sup></sup>
         </h1>
-        <a class="nav-link" href="gallery/">GALLERY</a>
+        <a class="nav-link" href="gallery/">EXPLORE</a>
         <a class="nav-link" href="contact/">CONTACT</a>
         <a class="nav-link" href="about/">ABOUT</a>
     </div>
